--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,9 @@
 VITE_SUPABASE_URL=your-supabase-url
 VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
 
+# Supabase Database URL (Drizzle ORM用)
+# 形式: postgresql://postgres:[YOUR-PASSWORD]@[YOUR-PROJECT-REF].supabase.co:5432/postgres
+DATABASE_URL=your-database-url
+
 # Riot API設定 (オプション)
 VITE_RIOT_API_KEY=your-riot-api-key
